--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                 </div>
                 <div class="md:w-1/2 text-center md:text-left" data-aos="fade-left">
                     <h1 class="text-4xl md:text-6xl font-bold mb-4 text-primary-400 dark:text-primary-400">Hey! I'm Tanya</h1>
-                    <h2 id="output" class="text-2xl md:text-3xl mb-6 text-primary-300 dark:text-primary-300">Software Engineer</h2>
-                    <p class="text-lg mb-8 text-gray dark:text-gray">I build apps and SaaS platforms that don’t just work—they actually make people’s lives easier.</p>
-                    <p class="text-lg mb-8 text-gray dark:text-gray">With experience across SaaS, CRM, and telecom, I turn complex ideas into simple, usable solutions.</p>
-                    <p class="text-lg mb-8 text-gray dark:text-gray">(Also known to celebrate a successful bug fix like a championship win.)</p>
+                    <h2 id="output" class="text-2xl md:text-3xl mb-6 text-primary-300 dark:text-primary-300"></h2>
+                    <p class="text-lg mb-8 text-primary-300 dark:text-primary-300">I build apps and SaaS platforms that don’t just work—they actually make people’s lives easier.</p>
+                    <p class="text-lg mb-8 text-primary-300 dark:text-primary-300">With experience across SaaS, CRM, and telecom, I turn complex ideas into simple, usable solutions.</p>
+                    <p class="text-lg mb-8 text-primary-300 dark:text-primary-300">(Also known to celebrate a successful bug fix like a championship win.)</p>
                     <div class="flex justify-center md:justify-start space-x-4">
                         <a href="#contact" class="px-6 py-3 bg-primary-200 text-white rounded-lg hover:bg-primary-300 transition duration-300">Contact Me</a>
                         <a href="#about" class="px-6 py-3 bg-primary-200 text-white rounded-lg hover:bg-primary-300 transition duration-300">Learn More</a>
@@ -284,7 +284,7 @@
     <!-- Education Section -->
     <section id="education" class="bg-primary-100 dark:bg-primary-100 py-20">
         <div class="container mx-auto px-6">
-            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-primary-400 dark:text-primary-200" data-aos="fade-up">EDUCATION</h2>
+            <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-primary-400 dark:text-primary-400" data-aos="fade-up">EDUCATION</h2>
             <div class="max-w-3xl mx-auto">
                 <div class="relative pl-8 timeline-item" data-aos="fade-up">
                     <div class="timeline-dot"></div>
